8285437: riscv: Fix MachNode size mismatch for MacroAssembler::verify_oops*

Reviewed-by: shade, fyang